# tariff_fetch

./: .gitignore  .pre-commit-config.yaml  404.html  Justfile  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json  postCreateCommand.ps1  postCreateCommand.sh
.github/ISSUE_TEMPLATE/: issue_template.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: on-release-main.yml  python-package-main.yml
docs/: index.md  modules.md
modules/: index.html
search/: search_index.json
tariff_fetch/: __init__.py  cli.py  cli_gas.py  foo.py  openeia.py
tariff_fetch/_cli/: __init__.py  genability.py  openei.py  rateacuity.py  types.py
tariff_fetch/genability/: __init__.py  base.py  converters.py  lse.py  pagination.py  response.py  search.py  tariffs.py
tariff_fetch/openei/: base.py  utility_rates.py
tariff_fetch/rateacuity/: __init__.py  base.py  electric.py  report_tables.py  state.py
tests/: test_foo.py
